--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Counter from "../components/Counter.jsx";
 <Layout>
     <div style={`background-image: url('${writingImg.src}')`}
          class="flex items-center flex-wrap md:flex-nowrap bg-fixed h-[600px]">
-        <div class="m-12">
+        <div class="m-4 md:m-12">
             <h1 class="text-7xl text-orange-500 font-poppins font-extrabold">TutorLion</h1>
             <p class="w-full md:w-[80%] text-xl text-white mt-4 p-2 bg-gray-200 bg-opacity-30 rounded-sm">
                 At TutorLion, we are committed to providing exceptional academic support
@@ -33,8 +33,8 @@ import Counter from "../components/Counter.jsx";
             </div>
         </div>
     </div>
-    <div class="p-12 mt-36 md:mt-0 text-left">
-        <h2 class="text-5xl sm:text-6xl mb-6 text-center font-poppins font-extrabold">
+    <div class="p-12 mt-24 md:mt-0">
+        <h2 class="text-5xl md:text-6xl mb-6 text-center font-poppins font-extrabold">
             Testimonials
         </h2>
         <div class="md:p-10">
@@ -42,7 +42,7 @@ import Counter from "../components/Counter.jsx";
         </div>
     </div>
     <div class="p-14 text-center bg-stone-100">
-        <h2 class="text-6xl m-10 text-center font-poppins font-extrabold">Our success</h2>
+        <h2 class="text-5xl md:text-6xl m-10 text-center font-poppins font-extrabold">Our success</h2>
         <div class="flex flex-col md:flex-row items-center justify-center divide-y-4 md:divide-y-0 md:divide-x-4 divide-orange-500 hover:divide-amber-500">
             <p class="flex-1 text-3xl p-10">
                 <span class="font-poppins text-7xl"><Counter client:visible number="75"/>+</span> <br/>
@@ -59,7 +59,7 @@ import Counter from "../components/Counter.jsx";
         </div>
     </div>
     <div class="p-12 bg-blue-50">
-        <h2 class="text-6xl mb-12 text-center font-poppins font-extrabold">What we offer</h2>
+        <h2 class="text-5xl md:text-6xl mb-12 text-center font-poppins font-extrabold">What we offer</h2>
         <div class="grid grid-rows-3 md:grid-rows-none md:grid-cols-3 gap-3.5 items-stretch">
             <div class="col-span-1 flex flex-col justify-between bg-white shadow-2xl shadow-gray-500">
                 <div class="grid">
