make tutors page look better

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ const socialMediaIcons = [
 ---
 
 
-<footer class="flex items-center justify-between bg-cyan-700 p-4 w-full">
+<footer class="flex items-center justify-between bg-brown p-4 w-full">
     <a href="/" class="text-white text-3xl font-extrabold">TutorLion</a>
     <div class="inline-flex items-center justify-center mt-2">
         {
