--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,7 @@ import Field from "../components/Field.astro";
 
 
 <Layout>
-    <div class="flex flex-col justify-center items-center text-center m-10 p-8 bg-orange-200">
+    <div class="flex flex-col justify-center items-center text-center mt-0 m-10 p-6">
         <h1 class="text-6xl text-orange-500 font-poppins font-extrabold m-10">Register with us today!</h1>
         <form class="flex flex-col" method="POST">
             <div class="block">
