--- a/src/components/Tutor.astro
+++ b/src/components/Tutor.astro
@@ -1,21 +1,21 @@
 ---
 import CollapsedText from "./CollapsedText.jsx";
-interface TutorProps {
+interface Props {
     name: string
     image: object,
     description: string
 }
 
-const {tutor} = Astro.props as TutorProps;
+const {name, image, description} = Astro.props as Props;
 ---
 
-<div id={`bio-${tutor.name}`}
-     class="flex flex-col md:flex-row p-4 m-3 md:m-6 rounded-xl grayscale transition-all duration-500 shadow-lg items-center">
-    <img class="w-[200px] m-2 rounded-xl" src={tutor.image} width="800" height="1000"
+<div id="bio"
+     class="flex flex-row items-center p-4 m-3 md:m-6 rounded-xl grayscale duration-500 shadow-lg">
+    <img class="w-[300px] m-2 rounded-2xl" src={image} width="800" height="1000"
          alt="profile image"/>
-    <div class="m-4">
-        <p class="text-center md:text-left text-4xl md:text-5xl font-montserrat font-extrabold mb-4">{tutor.name}</p>
-        <p class="text-lg hidden md:block">{tutor.description}</p>
-        <CollapsedText description={tutor.description} client:media="(max-width: 768px)"/>
+    <div class="flex flex-col m-4">
+        <p class="text-4xl md:text-5xl font-montserrat font-extrabold mb-4">{name}</p>
+        <p class="text-lg hidden md:block">{description}</p>
+        <CollapsedText description={description} client:media="(max-width: 768px)"/>
     </div>
 </div>
