--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,39 +1,32 @@
 ---
+import {GoogleFontsOptimizer as Fonts} from "astro-google-fonts-optimizer";
+
 import writingImg from "../assets/writing.jpg";
 import Layout from "../layout/Layout.astro";
-import TestimonialSlider from "../components/Slider";
+import TestimonialSlider from "../components/slider/Slider";
 import Counter from "../components/Counter.jsx";
 ---
 
 <Layout>
+    <head slot="name">
+        <Fonts url="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
+    </head>
     <div style={`background-image: url('${writingImg.src}')`}
-         class="flex items-center flex-wrap md:flex-nowrap bg-fixed h-[600px]">
-        <div class="m-4 md:m-12">
-            <h1 class="text-7xl text-orange-500 font-poppins font-extrabold">TutorLion</h1>
-            <p class="w-full md:w-[80%] text-xl text-white mt-4 p-2 bg-gray-200 bg-opacity-30 rounded-sm">
-                At TutorLion, we are committed to providing exceptional academic support
-                to middle and elementary school students across the country. Our dedicated team
-                of knowledgeable tutors can provide guidance to your child in whatever subject
-                they need assistance in. <a class="text-blue-500 p-0.5 rounded-full hover:underline" href="/contact">Book
-                yours today!</a>
+         class="flex justify-center items-center flex-wrap md:flex-nowrap bg-fixed h-[350px] md:h-[600px]">
+        <div class="text-center mt-10">
+            <h1 class="text-7xl md:text-8xl text-orange-500 font-poppins font-extrabold">TutorLion</h1>
+            <p class="w-full md:w-full text-2xl text-white mt-4 p-2 font-montserrat rounded-sm">
+                For students, by students
             </p>
-        </div>
-
-        <div class="flex flex-col bg-white z-10 w-full md:w-[80%] p-8 md:mr-20">
-            <h2 class="text-5xl text-orange-500 text-center font-extrabold font-poppins">Find a tutor today!</h2>
-            <div class="flex text-center items-center justify-center text-3xl mt-14 space-x-3.5">
-                <a class="flex-1 bg-yellow-400 hover:bg-amber-500 duration-100 p-2 font-poppins rounded-full font-extrabold"
-                   href="/tutors">
-                    Tutors
-                </a>
-                <a class="flex-1 bg-yellow-400 hover:bg-amber-500 duration-100 p-2 font-poppins rounded-full font-extrabold"
-                   href="/contact">
-                    Contact
-                </a>
+            <div class="m-10 grid grid-cols-2 gap-3.5">
+                <a href="/tutors"
+                   class="pl-6 pr-6 pt-2 pb-2 bg-amber-400 rounded-full text-2xl font-montserrat font-extrabold hover:bg-yellow-300">Tutors</a>
+                <a href="/contact"
+                   class="pl-6 pr-6 pt-2 pb-2 bg-amber-400 rounded-full text-2xl font-montserrat font-extrabold hover:bg-yellow-300">Contact</a>
             </div>
         </div>
     </div>
-    <div class="p-12 mt-24 md:mt-0">
+    <div class="p-4 md:p-12 mt-24 md:mt-0">
         <h2 class="text-5xl md:text-6xl mb-6 text-center font-poppins font-extrabold">
             Testimonials
         </h2>
@@ -43,85 +36,36 @@ import Counter from "../components/Counter.jsx";
     </div>
     <div class="p-14 text-center bg-stone-100">
         <h2 class="text-5xl md:text-6xl m-10 text-center font-poppins font-extrabold">Our success</h2>
-        <div class="flex flex-col md:flex-row items-center justify-center divide-y-4 md:divide-y-0 md:divide-x-4 divide-orange-500 hover:divide-amber-500">
-            <p class="flex-1 text-3xl p-10">
+        <div class="flex flex-col md:flex-row items-center justify-center divide-y-4 md:divide-y-0 md:divide-x-4 divide-orange-500 hover:divide-brown">
+            <p class="flex-1 text-xl md:text-3xl p-10">
                 <span class="font-poppins text-7xl"><Counter client:visible number="75"/>+</span> <br/>
                 tutors in the Charlotte area
             </p>
-            <p class="flex-1 text-3xl p-10">
+            <p class="flex-1 text-xl lg:text-3xl p-10">
                 <span class="font-poppins text-7xl"><Counter client:visible number="50"/>+</span> <br/>
                 loyal customers
             </p>
-            <p class="flex-1 text-3xl p-10">
+            <p class="flex-1 text-xl lg:text-3xl p-10">
                 <span class="font-poppins text-7xl"><Counter client:visible number="30"/>+</span> <br/>
                 subjects taught
             </p>
         </div>
     </div>
-    <div class="p-12 bg-blue-50">
-        <h2 class="text-5xl md:text-6xl mb-12 text-center font-poppins font-extrabold">What we offer</h2>
-        <div class="grid grid-rows-3 md:grid-rows-none md:grid-cols-3 gap-3.5 items-stretch">
-            <div class="col-span-1 flex flex-col justify-between bg-white shadow-2xl shadow-gray-500">
-                <div class="grid">
-                    <div class="h-20 wave bg-slate-400 layer"></div>
-                    <div class="h-20 wave bg-gray-400 opacity-60 translate-y-5 translate-x-0 layer"></div>
-                </div>
-                <h3 class="text-3xl text-center font-poppins font-extrabold">In-person and <br/> Online tutoring</h3>
-                <ul class="text-2xl p-8 list-inside list-image-[url('check.svg')]">
-                    <li>Math</li>
-                    <li>Science</li>
-                    <li>Computer Science</li>
-                    <li>English</li>
-                    <li>Spanish</li>
-                    <li>Arts</li>
-                    <li class="list-image-none">... and more!</li>
-                </ul>
-                <br/>
-                <div class="grid rotate-180">
-                    <div class="h-20 wave bg-slate-400 layer"></div>
-                    <div class="h-20 wave bg-gray-400 opacity-60 translate-y-5 layer"></div>
-                </div>
-            </div>
-            <div class="col-span-1 flex flex-col justify-between bg-white shadow-2xl shadow-orange-700">
-                <div class="grid">
-                    <div class="h-20 wave bg-orange-400 layer"></div>
-                    <div class="h-20 wave bg-amber-400 opacity-60 translate-y-5 layer"></div>
-                </div>
-                <h3 class="text-3xl text-center font-poppins font-extrabold">SAT/ACT tutoring</h3>
-                <ul class="text-2xl p-8 list-inside list-image-[url('check.svg')]">
-                    <li>Reading</li>
-                    <li>Writing</li>
-                    <li>Math 1</li>
-                    <li>Math 2</li>
-                    <li>Math 3</li>
-                    <li>Precalculus</li>
-                    <li class="list-image-none">... and more!</li>
-                </ul>
-                <div class="grid rotate-180 bottom-0">
-                    <div class="h-20 wave bg-orange-400 layer"></div>
-                    <div class="h-20 wave bg-amber-400 opacity-60 translate-y-5 layer"></div>
-                </div>
-            </div>
-            <div class="col-span-1 flex flex-col justify-between bg-white shadow-2xl shadow-blue-700">
-                <div class="grid">
-                    <div class="h-20 wave bg-blue-400 layer"></div>
-                    <div class="h-20 wave bg-cyan-400 opacity-60 translate-y-5 layer"></div>
-                </div>
-                <h3 class="text-3xl text-center font-poppins font-extrabold ">Per-class payment</h3>
-                <ul class="text-2xl p-8 list-inside list-image-[url('check.svg')]">
-                    <li>Pay only when you need it</li>
-                    <li>Pricing available</li>
-                </ul>
-                <div class="grid rotate-180">
-                    <div class="h-20 wave bg-blue-400 layer"></div>
-                    <div class="h-20 wave bg-cyan-400 opacity-60 translate-y-5 layer"></div>
-                </div>
+    <div class="flex flex-col items-center justify-center p-12">
+        <h2 class="text-5xl md:text-6xl mb-12 font-poppins font-extrabold">What we offer</h2>
+        <div class="grid grid-cols-2">
+            <div>
+                <h3>Flexible scheduling</h3>
+                <p>
+                    Schedule classes anytime, anywhere. Whether it's virtual
+                </p>
             </div>
         </div>
-        <div class="grid items-center justify-center p-20">
-            <h2 class="text-5xl mb-12 text-center font-poppins font-extrabold">Join us!</h2>
-            <a class="bg-orange-400 hover:bg-orange-500 text-center text-white hover:text-black text-3xl duration-300 p-4 rounded-md font-poppins" href="/contact">Register</a>
-        </div>
+    </div>
+    <div class="grid items-center justify-center p-20">
+        <h2 class="text-5xl mb-12 text-center font-poppins font-extrabold">Join us!</h2>
+        <a class="bg-orange-400 hover:bg-brown text-stone-700 text-center hover:text-white hover:scale-110 hover:-translate-y-2 hover:shadow-2xl text-3xl duration-300 p-4 rounded-full font-poppins"
+           href="/contact">Register</a>
     </div>
 </Layout>
 
