--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -3,6 +3,16 @@ import {GoogleFontsOptimizer as Fonts} from "astro-google-fonts-optimizer";
 import {SEO} from "astro-seo";
 import Navbar from "../components/nav/Navbar.astro";
 import Footer from "../components/Footer.astro";
+
+const defaultDescription = `TutorLion: At TutorLion, 
+we are committed to providing exceptional 
+academic support to middle and elementary school students across the country.`;
+
+let {title, description} = Astro.props as {title: string, description: string};
+
+title = "Tutorlion - Quality 1-on-1 Lessons at $15/hr" ?? title;
+description = description ?? defaultDescription;
+
 ---
 
 <html lang="en">
@@ -14,14 +24,35 @@ import Footer from "../components/Footer.astro";
     <title>TutorLion</title>
     <Fonts url="https://fonts.googleapis.com/css2?family=Nunito&display=swap"/>
     <Fonts url="https://fonts.googleapis.com/css2?family=Poppins&display=swap"/>
-    <SEO />
-    <slot name="head" />
+    <Fonts url="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
+    <SEO
+            title={title}
+            description={description}
+            openGraph={{
+                basic: {
+                    title: title,
+                    type: "Tutoring service",
+                    image: "/banner.webp",
+                }
+            }}
+            extend={{
+                link: [{rel: "icon", href: "/favicon.ico"}],
+                meta: [
+                    {
+                        name: "twitter:image",
+                        content: "/banner.webp",
+                    },
+                    {name: "twitter:title", content: "Tutorlion"},
+                    {name: "twitter:description", content: description},
+                ],
+            }}
+    />
 </head>
 <body class="flex flex-col min-h-screen bg-stone-100 font-nunito">
-<Navbar />
+<Navbar/>
 <main class="flex-1">
-<slot/>
+    <slot/>
 </main>
-<Footer />
+<Footer/>
 </body>
 </html>
