--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,10 @@ import TestimonialSlider from "../components/slider/Slider";
 import Counter from "../components/Counter.jsx";
 ---
 
-<Layout>
-    <head slot="name">
-        <Fonts url="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
-    </head>
+<Layout
+        title="Tutorlion"
+        description="We provide tutoring for a variety of subjects"
+>
     <div style={`background-image: url('${writingImg.src}')`}
          class="flex justify-center items-center flex-wrap md:flex-nowrap bg-fixed h-[350px] md:h-[600px]">
         <div class="text-center mt-10">
@@ -24,14 +24,6 @@ import Counter from "../components/Counter.jsx";
                 <a href="/contact"
                    class="pl-6 pr-6 pt-2 pb-2 bg-amber-400 rounded-full text-2xl font-montserrat font-extrabold hover:bg-yellow-300">Contact</a>
             </div>
-        </div>
-    </div>
-    <div class="p-4 md:p-12 mt-24 md:mt-0">
-        <h2 class="text-5xl md:text-6xl mb-6 text-center font-poppins font-extrabold">
-            Testimonials
-        </h2>
-        <div class="md:p-10">
-            <TestimonialSlider client:only="react"/>
         </div>
     </div>
     <div class="p-14 text-center bg-stone-100">
@@ -51,21 +43,57 @@ import Counter from "../components/Counter.jsx";
             </p>
         </div>
     </div>
-    <div class="flex flex-col items-center justify-center p-12">
+    <div class="flex flex-col text-center items-center justify-center p-12">
         <h2 class="text-5xl md:text-6xl mb-12 font-poppins font-extrabold">What we offer</h2>
-        <div class="grid grid-cols-2">
-            <div>
-                <h3>Flexible scheduling</h3>
-                <p>
+        <div class="grid grid-rows-1 md:grid-rows-2 grid-cols-1 md:grid-cols-2 gap-3.5">
+            <div class="p-8">
+                <h3 class="text-3xl font-semibold">Flexible scheduling</h3>
+                <p class="text-xl md:pr-10 mt-4">
                     Schedule classes anytime, anywhere. Whether it's virtual
+                    or <span class="whitespace-nowrap">in-person</span>,
+                    find a time and a place that works for you! See our
+                    <a class="text-blue-400 hover:underline" href="/contact">signup</a> page to learn more!
+                </p>
+            </div>
+            <div class="p-8">
+                <h3 class="text-3xl font-semibold">Student tutors</h3>
+                <p class="text-xl md:pr-10 mt-4">
+                    Find a dedicated student tutor
+                    that's perfect for you! If you want to become a tutor, learn more
+                    <a class="text-blue-400 hover:underline" href="/tutors">here.</a>
+                </p>
+            </div>
+            <div class="p-8">
+                <h3 class="text-3xl font-semibold">SAT/ACT Tutoring</h3>
+                <p class="text-xl md:pr-10 mt-4">
+                    Need test prep? Look no further!
+                    our tutors have the experience and expertise needed
+                    to help you succeed! Having taken and scored highly on
+                    these tests, our tutors will help you achieve the score you want!
+                </p>
+            </div>
+            <div class="p-8">
+                <h3 class="text-3xl font-semibold">Math tutoring</h3>
+                <p class="text-xl md:pr-10 mt-4">
+                    From Math 1-3, to Calculus and Linear Algebra, our tutors have seen it all!
+                    With their expert math tutoring and guidance, our tutors are ready to improve your
+                    understanding of advanced math topics, all for a reasonable price!
                 </p>
             </div>
         </div>
     </div>
+    <div class="p-4 md:p-12 mt-24 md:mt-0">
+        <h2 class="text-5xl md:text-6xl mb-6 text-center font-poppins font-extrabold">
+            Testimonials
+        </h2>
+        <div class="md:p-10">
+            <TestimonialSlider client:only="react"/>
+        </div>
+    </div>
     <div class="grid items-center justify-center p-20">
-        <h2 class="text-5xl mb-12 text-center font-poppins font-extrabold">Join us!</h2>
-        <a class="bg-orange-400 hover:bg-brown text-stone-700 text-center hover:text-white hover:scale-110 hover:-translate-y-2 hover:shadow-2xl text-3xl duration-300 p-4 rounded-full font-poppins"
-           href="/contact">Register</a>
+        <h2 class="text-6xl mb-12 text-center font-poppins font-extrabold">Join us!</h2>
+        <a class="flex items-center justify-center bg-brown duration-200 hover:scale-110 hover:bg-orange-500 p-4 rounded-full text-white text-3xl"
+           href="/contact">Register now</a>
     </div>
 </Layout>
 
