--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Counter from "../components/Counter.jsx";
 
 <Layout
         title="Tutorlion"
-        description="We provide tutoring for a variety of subjects"
+        description="We provide tutoring for a variety of subjects!"
 >
     <div style={`background-image: url('${writingImg.src}')`}
          class="flex justify-center items-center flex-wrap md:flex-nowrap bg-fixed h-[350px] md:h-[600px]">
