--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,7 @@ import TestimonialSlider from "../components/slider/Slider";
 import Counter from "../components/Counter.jsx";
 ---
 
-<Layout
-        title="Tutorlion"
-        description="We provide tutoring for a variety of subjects!"
->
+<Layout>
     <div style={`background-image: url('${writingImg.src}')`}
          class="flex justify-center items-center flex-wrap md:flex-nowrap bg-fixed h-[350px] md:h-[600px]">
         <div class="text-center mt-10">
