--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Counter from "../components/Counter.jsx";
         </div>
     </div>
     <div class="p-14 text-center bg-stone-100">
-        <h2 class="text-5xl md:text-6xl m-10 text-center font-poppins font-extrabold">Our success</h2>
+        <h2 class="text-5xl md:text-6xl m-10 text-center font-poppins font-extrabold">Our Success</h2>
         <div class="flex flex-col md:flex-row items-center justify-center divide-y-4 md:divide-y-0 md:divide-x-4 divide-orange-500 hover:divide-brown">
             <p class="flex-1 text-xl md:text-3xl p-10">
                 <span class="font-poppins text-7xl"><Counter client:visible number="75"/>+</span> <br/>
@@ -48,7 +48,7 @@ import Counter from "../components/Counter.jsx";
                 <p class="text-xl md:pr-10 mt-4">
                     Schedule classes anytime, anywhere. Whether it's virtual
                     or <span class="whitespace-nowrap">in-person</span>,
-                    find a time and a place that works for you! See our
+                    find a time and place that works for you! See our
                     <a class="text-blue-400 hover:underline" href="/contact">signup</a> page to learn more!
                 </p>
             </div>
@@ -64,7 +64,7 @@ import Counter from "../components/Counter.jsx";
                 <h3 class="text-3xl font-semibold">SAT/ACT Tutoring</h3>
                 <p class="text-xl md:pr-10 mt-4">
                     Need test prep? Look no further!
-                    our tutors have the experience and expertise needed
+                    Our tutors have the experience and expertise needed
                     to help you succeed! Having taken and scored highly on
                     these tests, our tutors will help you achieve the score you want!
                 </p>
@@ -88,7 +88,7 @@ import Counter from "../components/Counter.jsx";
         </div>
     </div>
     <div class="grid items-center justify-center p-20">
-        <h2 class="text-6xl mb-12 text-center font-poppins font-extrabold">Join us!</h2>
+        <h2 class="text-6xl mb-12 text-center font-poppins font-extrabold">Join Us!</h2>
         <a class="flex items-center justify-center bg-brown duration-200 hover:scale-110 hover:bg-orange-500 p-4 rounded-full text-white text-3xl"
            href="/contact">Register now</a>
     </div>
