Picture changes/enhancements

--- a/src/components/nav/Navbar.astro
+++ b/src/components/nav/Navbar.astro
@@ -12,7 +12,7 @@ const links = [
 <div class="bg-brown sticky z-50 flex items-center top-0 p-1 md:shadow-lg overflow-hidden">
     <a href="/" class="p-3 pr-6 -m-2 inline-flex space-x-2 justify-center items-center text-white">
         <Image src={faviconClear} alt="logo" width="72" height="72"/>
-        <div class="text-4xl font-extrabold poppins font-montserrat">TutorLion</div>
+        <div class="text-2xl md:text-4xl font-extrabold poppins font-montserrat">TutorLion</div>
     </a>
     <nav class="space-x-3.5 p-6 hidden md:block ml-auto text-white">
         {links.map(
