--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -47,9 +47,9 @@ description = description ?? defaultDescription;
             }}
     />
 </head>
-<body class="flex flex-col min-h-screen bg-stone-100 font-nunito">
+<body class="flex flex-col min-h-screen font-nunito">
 <Navbar/>
-<main class="flex-1">
+<main class="flex-1 bg-stone-100 overflow-hidden">
     <slot/>
 </main>
 <Footer/>
