--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,7 +17,7 @@ const teamList = teams.map(t => {
 title="About Us"
 description="At TutorLion, we believe that every student has the potential to succeed. Our mission is to provide high-quality, personalized instruction to all."
 >
-    <div class="p-10">
+    <div class="p-2 md:p-10">
         <div class="text-center m-10">
             <h1 class="text-6xl text-orange-500 font-poppins font-extrabold">Our Team</h1>
             <p class="mt-4 mb-8 whitespace-pre-line">
