--- a/src/components/TeamMember.astro
+++ b/src/components/TeamMember.astro
@@ -10,11 +10,11 @@ const {
 } = Astro.props;
 ---
 
-<div class="group flex flex-col justify-center items-center pt-3 pb-3 shadow-lg rounded-lg duration-100">
+<div class="group flex flex-col justify-center items-center p-10 shadow-2xl rounded-lg">
     <div>
         <img class="w-[300px] rounded-full" src={image} alt={`team member ${name}`}/>
     </div>
-    <div class="flex flex-col justify-center items-center m-2">
+    <div class="flex flex-col justify-center items-center text-center m-2">
         <p class="text-4xl md:text-5xl font-poppins font-extrabold mb-4">{name}</p>
         <p class="text-2xl md:text-3xl font-poppins font-semibold italic group-hover:underline mb-4">{position}</p>
     </div>
