Picture changes/enhancements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Counter from "../components/Counter.jsx"; //
         </div>
     </div>
     <div class="p-14 text-center">
-        <h2 class="text-5xl md:text-6xl mb-10 text-center font-poppins font-extrabold">Our success</h2>
+        <h2 class="text-5xl md:text-6xl mb-10 text-center font-poppins font-extrabold">Our Success</h2>
         <div class="flex flex-col md:flex-row items-center justify-center divide-y-4 md:divide-y-0 md:divide-x-4 divide-orange-500 hover:divide-brown">
             <p class="flex-1 text-xl md:text-3xl p-10">
                 <span class="font-poppins text-7xl"><Counter client:visible number="75"/>+</span> <br/>
