--- a/src/pages/tutors.astro
+++ b/src/pages/tutors.astro
@@ -21,7 +21,7 @@ const tutorList = tutors.map(tutor => {
         description="Meet the Tutor Lions: a group of dedicated, knowledgeable professionals who are committed to helping students succeed."
 >
     <div class="text-center p-4 md:p-12">
-        <h1 class="text-6xl text-orange-500 font-poppins font-extrabold mt-8">Our tutors</h1>
+        <h1 class="text-6xl text-orange-500 font-poppins font-extrabold mt-8">Our Tutors</h1>
         <div class="p-10">
             <p class="md:pl-48 md:pr-48">
                 Meet the Tutor Lions: a group of dedicated, knowledgeable professionals who are committed to helping
