--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import Counter from "../components/Counter.jsx"; //
         <div class="grid grid-rows-1 md:grid-rows-2 grid-cols-1 md:grid-cols-2 gap-3.5">
             <div class="p-8 ">
                 <h3 class="text-3xl font-semibold">Flexible scheduling</h3>
-                <p class="text-xl mt-4 text-justify max-w-3xl">
+                <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
                     Schedule classes anytime, anywhere. Whether it's virtual
                     or <span class="whitespace-nowrap">in-person</span>,
                     find a time and a place that works for you! See our
@@ -53,7 +53,7 @@ import Counter from "../components/Counter.jsx"; //
             </div>
             <div class="p-8 flex flex-col items-center">
                 <h3 class="text-3xl font-semibold">Student tutors</h3>
-                <p class="text-xl mt-4 text-justify max-w-3xl">
+                <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
                     Find a dedicated student tutor
                     that's perfect for you! If you want to become a tutor, learn more
                     <a class="text-blue-400 hover:underline" href="/tutors">here.</a>
@@ -61,7 +61,7 @@ import Counter from "../components/Counter.jsx"; //
             </div>
             <div class="p-8 flex flex-col items-center">
                 <h3 class="text-3xl font-semibold">SAT/ACT Tutoring</h3>
-                <p class="text-xl mt-4 text-justify max-w-3xl">
+                <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
                     Need test prep? Look no further!
                     our tutors have the experience and expertise needed
                     to help you succeed! Having taken and scored highly on
@@ -70,7 +70,7 @@ import Counter from "../components/Counter.jsx"; //
             </div>
             <div class="p-8 flex flex-col items-center">
                 <h3 class="text-3xl font-semibold">Math tutoring</h3>
-                <p class="text-xl mt-4 text-justify max-w-3xl">
+                <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
                     From Math 1-3, to Calculus and Linear Algebra, our tutors have seen it all!
                     With their expert math tutoring and guidance, our tutors are ready to improve your
                     understanding of advanced math topics, all for a reasonable price!
