--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-import bannerImg from "../assets/tutorlion-banner.jpg";
+
+import bannerImg from "../assets/Waverly.jpeg";
 import Layout from "../layout/Layout.astro";
 import TestimonialSlider from "../components/slider/Slider";
 import Counter from "../components/Counter.jsx"; //
@@ -26,11 +27,11 @@ import Counter from "../components/Counter.jsx"; //
         <h2 class="text-5xl md:text-6xl mb-10 text-center font-poppins font-extrabold">Our Success</h2>
         <div class="flex flex-col md:flex-row items-center justify-center divide-y-4 md:divide-y-0 md:divide-x-4 divide-orange-500 hover:divide-brown">
             <p class="flex-1 text-xl lg:text-3xl p-10">
-                <span class="font-poppins text-7xl"><Counter client:visible number="75"/>+</span> <br/>
+                <span class="font-poppins text-7xl"><Counter client:visible number="115"/>+</span> <br/>
                 tutors in the Charlotte area
             </p>
             <p class="flex-1 text-xl lg:text-3xl p-10">
-                <span class="font-poppins text-7xl"><Counter client:visible number="50"/>+</span> <br/>
+                <span class="font-poppins text-7xl"><Counter client:visible number="75"/>+</span> <br/>
                 loyal customers
             </p>
             <p class="flex-1 text-xl lg:text-3xl p-10">
@@ -43,37 +44,34 @@ import Counter from "../components/Counter.jsx"; //
         <h2 class="text-5xl md:text-6xl mb-12 font-poppins font-extrabold">What we offer</h2>
         <div class="grid grid-rows-1 md:grid-rows-2 grid-cols-1 md:grid-cols-2 gap-3.5">
             <div class="p-8 ">
-                <h3 class="text-3xl font-semibold">Flexible scheduling</h3>
+                <h3 class="text-3xl font-semibold">1-On-1 Adaptive Tutoring</h3>
                 <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
-                    Schedule classes anytime, anywhere. Whether it's virtual
-                    or <span class="whitespace-nowrap">in-person</span>,
-                    find a time and place that works for you! See our
-                    <a class="text-blue-400 hover:underline" href="/contact">signup</a> page to learn more!
+                    Whether your student has a test coming up, or a presentation to practice,
+                    our <span class="whitespace-nowrap">flexible tutors</span> do it all.
+                    <a class="text-blue-400 hover:underline" href="/contact">Signup</a> today to try it out!
                 </p>
             </div>
             <div class="p-8 flex flex-col items-center">
-                <h3 class="text-3xl font-semibold">Student tutors</h3>
+                <h3 class="text-3xl font-semibold">Experienced Student Tutors</h3>
                 <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
-                    Find a dedicated student tutor
-                    that's perfect for you! If you want to become a tutor, learn more
+                    Who could be better than a student who has experienced the same school, class, curriculum, and teacher
+                    as your child to tutor them? Apply to be a tutor
                     <a class="text-blue-400 hover:underline" href="/tutors">here.</a>
                 </p>
             </div>
+                <div class="p-8 flex flex-col items-center">
+                    <h3 class="text-3xl font-semibold">All Grades K-12</h3>
+                    <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
+                        
+                        <span style={{fontWeight: "bold"}}> 1st grader?</span> A tutor great with kids can teach them basic concepts, handwriting, reading comprehension, etc.
+                        </br><span style={{fontWeight: "bold"}}> 7th grader?</span> A local highschool student can help them with classes, as well as get them ahead in subjects like math, while preparing and giving them advice for highschool.
+                        </br> <span style={{fontWeight: "bold"}}> 11th grader?</span> An experienced college student can help them with AP classes, SAT/ACT preparation, and college applications.
+                    </p>
+                </div>
             <div class="p-8 flex flex-col items-center">
-                <h3 class="text-3xl font-semibold">SAT/ACT Tutoring</h3>
+                <h3 class="text-3xl font-semibold">In-Person and Online</h3>
                 <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
-                    Need test prep? Look no further!
-                    Our tutors have the experience and expertise needed
-                    to help you succeed! Having taken and scored highly on
-                    these tests, our tutors will help you achieve the score you want!
-                </p>
-            </div>
-            <div class="p-8 flex flex-col items-center">
-                <h3 class="text-3xl font-semibold">Math tutoring</h3>
-                <p class="text-xl mt-4 text-center md:text-justify max-w-3xl">
-                    From Math 1-3, to Calculus and Linear Algebra, our tutors have seen it all!
-                    With their expert math tutoring and guidance, our tutors are ready to improve your
-                    understanding of advanced math topics, all for a reasonable price!
+                    At TutorLion, we're all about convenience. A tutor can come to your house or a nearby library, coffee shop, etc without any additional cost.
                 </p>
             </div>
         </div>
